# mcp-inbox-agent

./: .gitignore  README.md  agent_run.py  pyproject.toml
src/email_agent/: classifier.py  cli.py  gmail_client.py  rules.py  settings.py
