
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inbox-agent-mcp"
version = "0.1.0"
description = "Gmail sorting and spam cleanup via MCP tools"
requires-python = ">=3.10"
dependencies = []
[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]
